fix star fx align. fix pin re-entry. fix gameboard height if window short.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -51,15 +51,31 @@ html, body {
     display:none;
 }
 
+#bottom {
+    position:absolute;
+    bottom:0;
+    left:0;
+    width:100%;
+    height:10vh;
+}
 
 #game {
     z-index:1009;
     position:absolute;
     top:calc(50% - 280px);
+    top:23vh;
     height: 600px;
-    width:600px;
+    width:100%;
     display:none;
 }
+
+@media only screen and (max-height: 900px) {
+    #main {
+        width: 65vh;
+    }
+}
+
+
 
 #level, {
     position: absolute;
@@ -411,11 +427,10 @@ transition: color 0.4s;
 }
 
 #win2{
-top: 30%;
+    top: 30%;
     position: relative;
     font-size: 4em;
-    width:40%;
-    left:30%;
+    text-align:center;
 }
 .winStars {
     position: relative;
@@ -463,7 +478,6 @@ top: 30%;
 #deck, #energy, #swap {
     display:none;
     position:absolute;
-    top:calc(50% + 340px);
     left: 20px;
     height:60px;
     width:160px;
